# BioDataset-Setup-Tool

./: .gitignore  pyproject.toml
cyano-analyze/: bgc_stats.py  cds_analysis.py  combined_cds_analysis.py  gff_to_bgc.py  technology_test.py
cyano-fetcher/: main.py  pyproject.toml
src/genome_analyzer/: bgc.py  main.py  plots.py  prokka_update.py
src/genome_fetcher/: main.py
