[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genome_analyzer"
version = "0.1.0"
description = "A tool for Genomic Annotation stats and BGC analysis"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "openpyxl",
    "biopython>=1.82",
    "requests>=2.32.5",
    "tqdm>=4.67.3"
]
requires-python = ">=3.13"

[project.scripts]
# This allows you to type 'genome-tool' in your terminal to run the script
genome-tool = "genome_analyzer.main:main"
genome-tool-fetch = "genome_fetcher.main:main"
